# trv

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml  audio.sh  out.srt  test.typ
.github/workflows/: audit.yml  check.yml  examples.yml  release.yml  test.yml
examples/: demo.sh  demo.typ  first.sh  first.typ  google.sh  google.typ  math.typ  zonos.sh  zonos.typ
src/: audio.rs  image.rs  main.rs  path.rs  slide.rs  video.rs  watch.rs
src/scripts/: cleanup-tags.sh  release.sh
tests/: chat.rs  cli.rs  demo.rs  examples.rs  test.typ  test_cache.typ  test_duration_matches.typ  test_elevenlabs.typ  test_google.typ  test_notes.typ  test_openai_compatible.typ
tests/common/: mod.rs
