[package]
name = "trv"
version = "0.2.0"
edition = "2021"
authors = ["Rik Huijzer"]
license = "MIT"
description = "Transform slides and speaker notes into video"
repository = "https://github.com/transformrs/trv"

[dependencies]
anyhow = "1"
clap = { version = "4.5.29", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
tracing = "0.1"
transformrs = "0.7"
serde_json = "1.0.138"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
toml = "0.8"
