[package]
name = "trv"
version = "0.5.0"
edition = "2021"
authors = ["Rik Huijzer"]
license = "MIT"
description = "Transform slides and speaker notes into video"
repository = "https://github.com/transformrs/trv"

[dependencies]
anyhow = "1"
clap = { version = "4.5.29", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
tracing = "0.1"
transformrs = "0.7"
serde_json = "1.0.138"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8"
live-server = "0.10.0"
notify = "8.0"
indoc = "2"
ignore = "0.4"
chrono = "0.4.40"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
toml = "0.8"

[profile.release]
# Reduces binary size from 9.9M to 7.5M on MacOS.
lto = true
# Reduces binary size by 0.5M on MacOS.
codegen-units = 1
# Reduces binary size by 0.5M on MacOS.
opt-level = "z"
