[package]
name = "trv"
version = "0.7.0"
edition = "2021"
authors = ["Rik Huijzer"]
license = "MIT"
description = "Transform slides and speaker notes into video"
repository = "https://github.com/transformrs/trv"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
indoc = "2"
live-server = "0.10.0"
notify = "8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
transformrs = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
toml = "0.8"

[profile.release]
# Reduces binary size from 9.9M to 7.5M on MacOS.
lto = true
# Reduces binary size by 0.5M on MacOS.
codegen-units = 1
# Reduces binary size by 0.5M on MacOS.
opt-level = "z"
